--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,17 @@
       <version>4.4</version>
       <scope>test</scope>
     </dependency>
-    
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.parboiled</groupId>
+      <artifactId>parboiled-java</artifactId>
+      <version>1.1.6</version>
+    </dependency>
+        
     <!-- external dependencies -->
     <dependency>
       <groupId>nz.ac.waikato.cms.weka</groupId>
@@ -44,11 +54,6 @@
       <version>0.1</version>    
       <scope>system</scope>
       <systemPath>${system.libs}/HMM.jar</systemPath>
-    </dependency>
-    <dependency>
-      <groupId>org.parboiled</groupId>
-      <artifactId>parboiled-java</artifactId>
-      <version>1.1.6</version>
     </dependency>
   </dependencies>
 </project>
